# pydantic-settings

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  README.rst  pyproject.toml
docs/: README.md  conf.py  index.rst  requirements.txt  rst_builder_ext.py
docs/examples/: attr_docs_example.py  env_var_exact_loc.py  load_env_prefix.py  loc_inside_text_content.py  override_by_env.py
pydantic_settings/: __init__.py  _loc_mapping.py  attrs_docs.py  base.py  errors.py  field_docs.py  load.py  model_shape_restorer.py  restorer.py  test_json_symtable.py  test_settings_base.py  types.py  utils.py
pydantic_settings/decoder/: __init__.py  common.py  json.py  yaml.py
pydantic_settings/dumpers/: _yaml.py  common.py
pydantic_settings/loaders/: __init__.py  common.py  json.py  toml.py  yaml.py
test/: conftest.py  test_deep_map_merger.py  test_deep_map_proxy.py  test_errs_rendering.py  test_fields_docs.py  test_json_ast_decoder.py  test_json_ast_loader.py  test_load.py  test_restorer.py  test_settings_base.py  test_yaml_dumper.py
