[tool.poetry]
name = "pydantic-settings"  # HUY
version = "0.1.0"
description = "Hipster-orgazmic tool to mange application settings"
authors = ["Daniel Daniels <danields761@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^0.31.1"
pyyaml = "^5.1.2"
tomlkit = "^0.5.5"
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.0.1"
black = "^19.3b0"
pytest-clarity = "^0.2.0-alpha.1"

[tool.black]
# UEAH thats works
skip_string_normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
